fix: update variables

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Debug branch info
+        run: |
+          echo "Current branch: $(git branch --show-current)"
+          echo "All branches:"
+          git branch -a
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
