--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -3,10 +3,10 @@ name: Validate
 on:
   pull_request:
     branches:
-      - master
+      - main
   push:
     branches-ignore:
-      - master
+      - main
 
 jobs:
   terraform-validate:
